--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h1 {
 }
 .footer {
     bottom: 0px;
-    position: absolute;
+    position: fixed;
     background: #292929;
     width: 100%;
     color: white !important;
